--- a/app/src/Components/LoginSignup/LoginSignup.css
+++ b/app/src/Components/LoginSignup/LoginSignup.css
@@ -98,3 +98,16 @@
     color: #676767;
 }
 
+.login-here {
+    margin-top: 30px;
+    padding-left: 60px; /* Adjust the padding as needed */
+    color: #797979;
+    font-size: 15px;
+    cursor: pointer;
+  }
+  
+  .login-here span {
+    color: #444660;
+  }
+  
+  
