--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,12 +1,14 @@
+/* index.css */
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
-  background-color:#444660;
+  background-color: #444660
+  ; /* Set your desired background color */
 }
 
 code {
